# arser

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: arser.h
tests/: CMakeLists.txt  example.cpp
